<resources>
    <string name="app_name">FastShop</string>
    <string name="intro_image">Intro image</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="app_logo">App Logo</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="google">google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create New Account</string>
</resources>