<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginFragment">

            <!--logo-->
            <ImageView
                android:id="@+id/loginLogo"
                android:layout_width="160dp"
                android:layout_height="150dp"
                android:src="@drawable/logo"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_logo" />

            <!--Title text-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_new_account"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/loginLogo"
                app:layout_constraintStart_toStartOf="@+id/loginLogo"
                app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

            <!--User email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userEmailLayout"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                app:startIconDrawable="@drawable/ic_email"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--User password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPasswordLayout"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="25dp"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="@+id/userEmailLayout"
                app:layout_constraintStart_toStartOf="@+id/userEmailLayout"
                app:layout_constraintTop_toBottomOf="@+id/userEmailLayout"
                app:startIconDrawable="@drawable/ic_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:lines="1"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--Remember me-->
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/materialCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/remember_me"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:buttonTint="@color/material_blueA200"
                app:layout_constraintEnd_toEndOf="@+id/userPasswordLayout"
                app:layout_constraintStart_toStartOf="@+id/userPasswordLayout"
                app:layout_constraintTop_toBottomOf="@+id/userPasswordLayout" />

            <!--Sign up button-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="15dp"
                app:backgroundTint="@color/buttonColor"
                app:cornerRadius="25dp"
                android:text="@string/sign_up"
                android:fontFamily="@font/lato"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="@+id/materialCheckBox"
                app:layout_constraintStart_toStartOf="@+id/materialCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/materialCheckBox" />

            <!--continue with-->
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="@+id/loginButton"
                app:layout_constraintStart_toStartOf="@+id/loginButton"
                app:layout_constraintTop_toBottomOf="@+id/loginButton">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_weight="1"
                    android:text="@string/or_continue_with"
                    android:textAlignment="center"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="2dp"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <ImageView
                    android:id="@+id/loginWithFacebook"
                    android:layout_width="88dp"
                    android:layout_height="68dp"
                    android:background="@drawable/media_bg"
                    android:contentDescription="@string/google"
                    android:padding="15dp"
                    android:src="@drawable/ic_facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/loginWithGoogle"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/loginWithGoogle"
                    android:layout_width="88dp"
                    android:layout_height="68dp"
                    android:background="@drawable/media_bg"
                    android:contentDescription="@string/google"
                    android:padding="15dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="@+id/loginWithFacebook"
                    app:layout_constraintEnd_toStartOf="@+id/appleImage"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/loginWithFacebook"
                    app:layout_constraintTop_toTopOf="@+id/loginWithFacebook" />

                <ImageView
                    android:id="@+id/appleImage"
                    android:layout_width="88dp"
                    android:layout_height="68dp"
                    android:background="@drawable/media_bg"
                    android:contentDescription="@string/google"
                    android:padding="15dp"
                    android:src="@drawable/ic_apple"
                    app:layout_constraintBottom_toBottomOf="@+id/loginWithGoogle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/loginWithGoogle"
                    app:layout_constraintTop_toTopOf="@+id/loginWithGoogle" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Already have an account-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/grey"
                    android:text="@string/already_have_an_account"/>

                <TextView
                    android:id="@+id/signInText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/material_blueA200"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>